# Numerical_Integration

./: .gitignore  CMakeLists.txt  LICENSE.md  NumIntData.xlsx  README.md  nint_example.py  plot.py
OpenGL_Example/: main.cpp
include/: MatrixMath.hpp  PlotData.hpp  RK4.hpp
src/: MatrixMath.cpp  MatrixMath.hpp  PlotData.cpp  PlotData.hpp  RK4.cpp  RK4.hpp  main.cpp  rotate.cpp
